--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,10 @@
     font-family: 'Karla', sans-serif;
 }
 
+/* body {
+    opacity: 0.5;
+} */
+
 .header {
     text-align: center;
     padding: 50px 40px;
@@ -25,4 +29,33 @@ section {
     background-color: thistle;
     color: white;
     cursor: pointer;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    width: 420px;
+    gap: 10px;
+    justify-content: center;
+    align-items: center;
+    background: #fff;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
+   padding: 30px 25px;
+   display: none;
+}
+
+form > input {
+    padding: 10px 80px;
+    padding: 10px;
+    text-align: center;
+}
+
+#checkbox {
+
+}
+ 
+.input_book {
+   display: flex;
+   justify-content: center;
+   align-items: center;
 }
