--- a/styles.css
+++ b/styles.css
@@ -4,10 +4,6 @@
     font-family: 'Karla', sans-serif;
 }
 
-/* body {
-    opacity: 0.5;
-} */
-
 .header {
     text-align: center;
     padding: 50px 40px;
@@ -41,17 +37,25 @@ form {
     background: #fff;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
    padding: 30px 25px;
-   display: none;
+   border-radius: 5px;
+   /* display: none; */
 }
 
 form > input {
-    padding: 10px 80px;
-    padding: 10px;
+    padding: 10px 50px;
     text-align: center;
 }
 
-#checkbox {
+form > button {
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
 
+#checkbox {
+   width: 25px;
+   height: 20px;
 }
  
 .input_book {
