--- a/styles.css
+++ b/styles.css
@@ -39,6 +39,8 @@ form {
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
     padding: 30px 25px;
     border-radius: 10px;
+    margin-top: 20px;
+    position: relative;
 }
 
 form > input {
@@ -48,6 +50,7 @@ form > input {
 
 form > button {
     padding: 10px;
+    margin: 10px;
     border: none;
     border-radius: 5px;
     cursor: pointer;
@@ -62,6 +65,8 @@ form > button {
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 100vh;
+    width: 100vw;
 }
 
 .modal-container {
@@ -71,6 +76,7 @@ form > button {
     left: 0;
     height: 100vh;
     width: 100vw;
+    transition: linear;
     display: none;
 }
 
@@ -83,6 +89,17 @@ form > button {
 
 .book-details {
     display: flex;
+    flex-direction: column;
     gap: 1rem;
     padding: 1rem;
+    border: 2px solid magenta;
+}
+
+#close-modal {
+    position: absolute;
+    top: 0;
+    right: 0;
+    font-size: 16px;
+    padding: 5px;
+    margin: 10px 10px;
 }
